# X_hub

./: README.md  build-profile.json5  oh-package.json5  鸿蒙原生Emby客户端PRD.md  鸿蒙原生Emby播放器开发输入文档.md
.hvigor/cache/: file-cache.json  meta.json  task-cache.json
.hvigor/dependencyMap/: dependencyMap.json5  oh-package.json5
.hvigor/dependencyMap/entry/: oh-package.json5
.hvigor/outputs/logs/details/: details.json
.hvigor/outputs/sync/: fileCache.json  output.json
.hvigor/report/: report-202605101202419930.json  report-202605102127320000.json  report-202605130814557840.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package.json5
entry/.preview/: PreviewBuildParam.json
entry/.preview/config/: buildConfig.json
entry/.preview/default/intermediates/loader/default/: loader.json
entry/.preview/default/intermediates/merge_profile/default/: module.json
entry/.preview/default/intermediates/process_profile/default/: module.json
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/include/: emby_player.h
entry/src/main/cpp/src/: audio_pipeline.cpp  hw_video_decoder.cpp  napi_init.cpp  player_engine.cpp  ts_demuxer.cpp
entry/src/main/cpp/types/libembyplayer/: Index.d.ts  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: EmbyTypes.ets
entry/src/main/ets/pages/: Detail.ets  Index.ets  Main.ets  Player.ets  VideoList.ets
entry/src/main/ets/services/: CodecCapabilityService.ets  EmbyApi.ets  HttpClient.ets
(+43 files in other folders)
